objects/Map_Data__mdt.object
<CustomObject>
    <fields>
        <fullName>Destination_Field__c</fullName>
        <label>Destination Field</label>
        <metadataRelationshipControllingField>Map_Data__mdt.Destination_Object__c</metadataRelationshipControllingField>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>Map_Datum1</relationshipLabel>
        <relationshipName>Map_Datum1</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Destination_Object__c</fullName>
        <label>Destination Object</label>
        <referenceTo>EntityDefinition</referenceTo>
        <relationshipLabel>Map_Datum1</relationshipLabel>
        <relationshipName>Map_Datum1</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>OBJ__c</fullName>
        <label>OBJ</label>
        <referenceTo>EntityDefinition</referenceTo>
        <relationshipLabel>Map_Datum2</relationshipLabel>
        <relationshipName>Map_Datum2</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Source_Field__c</fullName>
        <label>Source Field</label>
        <metadataRelationshipControllingField>Map_Data__mdt.Source_Object__c</metadataRelationshipControllingField>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>Map_Datum</relationshipLabel>
        <relationshipName>Map_Datum</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Source_Object__c</fullName>
        <label>Source Object</label>
        <referenceTo>EntityDefinition</referenceTo>
        <relationshipLabel>Map_Datum</relationshipLabel>
        <relationshipName>Map_Datum</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>field__c</fullName>
        <label>field</label>
        <metadataRelationshipControllingField>Map_Data__mdt.OBJ__c</metadataRelationshipControllingField>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>Map_Datum2</relationshipLabel>
        <relationshipName>Map_Datum2</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <label>Map Data</label>
    <pluralLabel>Map Datum</pluralLabel>
</CustomObject>